test/tests/stages/5_local_variables/valid/extra_credit/postfix_precedence.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: a
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 1
                      None: 
                    None: 
                  Int: 
                  None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: b
                  CSingleInit: 
                    CUnary: 
                      CNot: 
                      CAssignment: 
                        CPostfix: 
                        None: 
                        CBinary: 
                          CAdd: 
                          CVar: 
                            TIdentifier: a
                            None: 
                          CConstant: 
                            CConstInt: 
                              TInt: 1
                            None: 
                          None: 
                        None: 
                      None: 
                    None: 
                  Int: 
                  None: 
            CS: 
              CReturn: 
                CBinary: 
                  CAnd: 
                  CBinary: 
                    CEqual: 
                    CVar: 
                      TIdentifier: a
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 2
                      None: 
                    None: 
                  CBinary: 
                    CEqual: 
                    CVar: 
                      TIdentifier: b
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
